--- a/aquapi_camera_config.yaml
+++ b/aquapi_camera_config.yaml
@@ -6,7 +6,11 @@ substitutions:
   app_version: "2024.6.1"
 
 packages:
-  device_base_camera: !include common/device_base_camera.yaml
+  device_base_camera: !include common/device_base.yaml
   aquapi: !include common/aquapi.yaml
-  ota_https: !include common/ota_https_camera.yaml
+  ota_https: !include common/ota_https.yaml
   # debug: !include common/debug.yaml
+
+light:
+  - id: !extend status_led
+    pin: 33
