--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -6,6 +6,7 @@ substitutions:
   app_version: "2024.6.1"
 
 packages:
+  common: !include common/device_base_common.yaml
   device_base: !include common/device_base.yaml
   aquapi: !include common/aquapi.yaml
   ota_https: !include common/ota_https.yaml
