--- a/common/device_base_common.yaml
+++ b/common/device_base_common.yaml
@@ -28,7 +28,8 @@ sensor:
 
   # Wifi Signal 
   - platform: wifi_signal # Reports the WiFi signal strength/RSSI in dB
-    # name: "WiFi Signal dB"
+    name: "WiFi Signal dB"
+    disabled_by_default: true
     id: wifi_signal_db
     update_interval: 60s
     entity_category: "diagnostic"
