--- a/aquapi_camera_config.yaml
+++ b/aquapi_camera_config.yaml
@@ -7,11 +7,7 @@ substitutions:
 
 packages:
   common: !include common/device_base_common.yaml
-  device_base_camera: !include common/device_base.yaml
+  device_base_camera: !include common/device_base_camera.yaml
   aquapi: !include common/aquapi.yaml
-  ota_https: !include common/ota_https.yaml
+  ota_https: !include common/ota_https_camera.yaml
   # debug: !include common/debug.yaml
-
-light:
-  - id: !extend status_led
-    pin: 33
