--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "AquaPi",
-  "version": "",
+  "version": "2024.6.1",
   "home_assistant_domain": "esphome",
   "new_install_skip_erase": false,
   "builds": [
