--- a/aquapi_camera_config.yaml
+++ b/aquapi_camera_config.yaml
@@ -3,9 +3,10 @@ substitutions:
   name: "aquapicamera"
   friendly_name: "AquaPiCamera"
   # App Version - Updated: 6/2024
-  app_version: "2024.6.1"
+  app_version: "2024.6.2"
 
 packages:
+  common: !include common/device_base_common.yaml
   device_base_camera: !include common/device_base_camera.yaml
   aquapi: !include common/aquapi.yaml
   ota_https: !include common/ota_https_camera.yaml
