--- a/common/ota_https_camera.yaml
+++ b/common/ota_https_camera.yaml
@@ -11,7 +11,7 @@ update:
     entity_category: 'diagnostic'
     icon: mdi:update
     id: update_firmware_sensor
-    source: https://raw.githubusercontent.com/TheRealFalseReality/aquapi/main/manifest_camera.json
+    source: https://raw.githubusercontent.com/TheRealFalseReality/aquapi/main/bin/manifest_camera.json
 
 ota:
   - platform: http_request
@@ -21,6 +21,7 @@ button:
     id: update_firmware
     name: Update Firmware (Experimental)
     entity_category: "config"
+    icon: mdi:update
     # disabled_by_default: true
     on_press: 
       then:
