--- a/common/ota_https.yaml
+++ b/common/ota_https.yaml
@@ -19,12 +19,12 @@ ota:
 button:
   - platform: template
     id: update_firmware
-    name: Update Firmware (Experimental)
+    name: Update Firmware (Experimental - ESP32)
     entity_category: "config"
     icon: mdi:update
     # disabled_by_default: true
     on_press: 
       then:
         - ota.http_request.flash:
-            md5_url: https://raw.githubusercontent.com/TheRealFalseReality/aquapi/main/bin/ota/aquapi.md5
-            url: https://raw.githubusercontent.com/TheRealFalseReality/aquapi/main/bin/ota/aquapi.ota.bin
+            md5_url: https://raw.githubusercontent.com/TheRealFalseReality/aquapi/main/bin/ota/aquapi-esp32.ota.md5
+            url: https://raw.githubusercontent.com/TheRealFalseReality/aquapi/main/bin/ota/aquapi-esp32.ota.bin
