modified:   common/ezo_do.yaml 	modified:   common/ezo_rtd.yaml

--- a/common/ezo_do.yaml
+++ b/common/ezo_do.yaml
@@ -7,7 +7,7 @@ substitutions:
 #     on_boot: 
 #         priority: 200
 #         then:
-#           - button.press: send_selected_ph
+#           - button.press: send_selected_do
 
 sensor:
   # EZO Circuits (SCL/RX, SDA/TX)
