--- a/common/ezo_commands.yaml
+++ b/common/ezo_commands.yaml
@@ -12,7 +12,7 @@ button:
     on_press:
         then:
         - ezo_pmp.change_i2c_address:
-            id: ezo_pump
+            id: ezo_pump_white
             address: ${addPMP_default}
 
   - platform: template
@@ -20,7 +20,7 @@ button:
     on_press:
         then:
         - ezo_pmp.change_i2c_address:
-            id: ezo_pump
+            id: ezo_pump_white
             address: ${addPMP_alt1}
 
   - platform: template
@@ -28,7 +28,7 @@ button:
     on_press:
         then:
         - ezo_pmp.change_i2c_address:
-            id: ezo_pump
+            id: ezo_pump_white
             address: ${addPMP_alt2}
 
   - platform: template
@@ -36,5 +36,5 @@ button:
     on_press:
         then:
         - ezo_pmp.change_i2c_address:
-            id: ezo_pump
+            id: ezo_pump_white
             address: ${addPMP_alt3}
