--- a/common/ota_https.yaml
+++ b/common/ota_https.yaml
@@ -6,7 +6,7 @@ http_request:
 
 update:
   - platform: http_request
-    name: Firmware Update
+    name: AquaPi Firmware Update
     update_interval: "${update_firmware_sensor_interval}"
     id: update_firmware_sensor
     entity_category: 'diagnostic'
@@ -19,7 +19,7 @@ ota:
 button:
   - platform: template
     id: update_firmware
-    name: Update Firmware (Experimental - ESP32)
+    name: Update AquaPi Firmware (Experimental - ESP32)
     entity_category: "config"
     icon: mdi:update
     # disabled_by_default: true
