Test - ota_https (#69)
* Changes to be committed:
	modified:   aquapi_config.yaml
	modified:   common/device_base.yaml
	new file:   common/dht.yaml
	modified:   common/ezo_pmp_duo.yaml
	new file:   common/ir_receiver.yaml

* Changes to be committed:
	modified:   common/ezo_commands.yaml

* blueprints updated

* blueprints updated

* name update

* Update aquarium_ato_aquapi.yaml

* ota changes

* Update ota_https_camera.yaml

--- a/common/ota_https.yaml
+++ b/common/ota_https.yaml
@@ -6,20 +6,17 @@ http_request:
 
 update:
   - platform: http_request
-    name: Firmware Update
+    name: AquaPi Firmware Update
     update_interval: "${update_firmware_sensor_interval}"
     id: update_firmware_sensor
     entity_category: 'diagnostic'
     icon: mdi:update
     source: https://raw.githubusercontent.com/TheRealFalseReality/aquapi/gh-pages/manifest.json
 
-ota:
-  - platform: http_request
-
 button:
   - platform: template
     id: update_firmware
-    name: Update Firmware (Experimental - ESP32)
+    name: Update AquaPi Firmware (Experimental - ESP32)
     entity_category: "config"
     icon: mdi:update
     # disabled_by_default: true
