--- a/common/ota_https_camera.yaml
+++ b/common/ota_https_camera.yaml
@@ -6,20 +6,17 @@ http_request:
 
 update:
   - platform: http_request
-    name: Firmware Update
+    name: AquaPi SnapCam Firmware Update
     update_interval: "${update_firmware_sensor_interval}"
     entity_category: 'diagnostic'
     icon: mdi:update
     id: update_firmware_sensor
     source: https://raw.githubusercontent.com/TheRealFalseReality/aquapi/main/bin/manifest_camera.json
 
-ota:
-  - platform: http_request
-
 button:
   - platform: template
     id: update_firmware
-    name: Update Firmware (Experimental - ESP32cam)
+    name: Update AquaPi SnapCam Firmware (Experimental - ESP32cam)
     entity_category: "config"
     icon: mdi:update
     # disabled_by_default: true
