--- a/aquapi_camera_config.yaml
+++ b/aquapi_camera_config.yaml
@@ -9,5 +9,5 @@ packages:
   common: !include common/device_base_common.yaml
   device_base_camera: !include common/device_base_camera.yaml
   aquapi: !include common/aquapi.yaml
-  ota_https: !include common/ota_https_camera.yaml
+  # ota_https: !include common/ota_https_camera.yaml
   # debug: !include common/debug.yaml
