--- a/common/ota_https_camera.yaml
+++ b/common/ota_https_camera.yaml
@@ -13,15 +13,15 @@ update:
     id: update_firmware_sensor
     source: https://raw.githubusercontent.com/TheRealFalseReality/aquapi/main/bin/manifest_camera.json
 
-button:
-  - platform: template
-    id: update_firmware
-    name: Update AquaPi SnapCam Firmware (Experimental - ESP32cam)
-    entity_category: "config"
-    icon: mdi:update
-    # disabled_by_default: true
-    on_press: 
-      then:
-        - ota.http_request.flash:
-            md5_url: https://raw.githubusercontent.com/TheRealFalseReality/aquapi/main/bin/ota/aquapicamera.md5
-            url: https://raw.githubusercontent.com/TheRealFalseReality/aquapi/main/bin/ota/aquapicamera.ota.bin
+# button:
+#   - platform: template
+#     id: update_firmware
+#     name: Update AquaPi SnapCam Firmware (Experimental - ESP32cam)
+#     entity_category: "config"
+#     icon: mdi:update
+#     # disabled_by_default: true
+#     on_press: 
+#       then:
+#         - ota.http_request.flash:
+#             md5_url: https://raw.githubusercontent.com/TheRealFalseReality/aquapi/main/bin/ota/aquapicamera.md5
+#             url: https://raw.githubusercontent.com/TheRealFalseReality/aquapi/main/bin/ota/aquapicamera.ota.bin
