--- a/common/ota_https.yaml
+++ b/common/ota_https.yaml
@@ -1,6 +1,9 @@
 substitutions:
   update_firmware_sensor_interval: 6h
 
+ota:
+  - platform: http_request
+
 http_request:
   verify_ssl: false
 
@@ -13,15 +16,15 @@ update:
     icon: mdi:update
     source: https://raw.githubusercontent.com/TheRealFalseReality/aquapi/gh-pages/manifest.json
 
-button:
-  - platform: template
-    id: update_firmware
-    name: Update AquaPi Firmware (Experimental - ESP32)
-    entity_category: "config"
-    icon: mdi:update
-    # disabled_by_default: true
-    on_press: 
-      then:
-        - ota.http_request.flash:
-            md5_url: https://raw.githubusercontent.com/TheRealFalseReality/aquapi/main/bin/ota/aquapi-esp32.ota.md5
-            url: https://raw.githubusercontent.com/TheRealFalseReality/aquapi/main/bin/ota/aquapi-esp32.ota.bin
+# button:
+#   - platform: template
+#     id: update_firmware
+#     name: Update AquaPi Firmware (Experimental - ESP32)
+#     entity_category: "config"
+#     icon: mdi:update
+#     # disabled_by_default: true
+#     on_press: 
+#       then:
+#         - ota.http_request.flash:
+#             md5_url: https://raw.githubusercontent.com/TheRealFalseReality/aquapi/main/bin/ota/aquapi-esp32.ota.md5
+#             url: https://raw.githubusercontent.com/TheRealFalseReality/aquapi/main/bin/ota/aquapi-esp32.ota.bin
