--- a/common/temperature_dallas_2.yaml
+++ b/common/temperature_dallas_2.yaml
@@ -74,22 +74,20 @@ binary_sensor:
         return false;
       }
 
-text_sensor:
   # Temperature Range 2
   - platform: template
     name: Temperature 2 Range
-    id: range_temp_2
+    id: temp_range_2
     icon: mdi:thermometer-water
     update_interval: "${update_temp}"
-    disabled_by_default: true
     lambda: |-
-      if(id(fah_temp_2).state <= id(range_cool_temp_2).state) {
+      if(id(temp_f_2).state <= id(range_cool_2).state) {
         return {"Cool"};
       }
-      if(id(fah_temp_2).state < id(range_cool_temp_2).state && id(fah_temp_2).state > id(range_cool_temp_2).state) {
+      if(id(temp_f_2).state < id(range_warm_2).state && id(temp_f_2).state > id(range_cool_2).state) {
         return {"OK"};
       }
-      if(id(fah_temp_2).state >= id(range_cool_temp_2).state) {
+      if(id(temp_f_2).state >= id(range_warm_2).state) {
         return {"Warm"};
       }     
       else {
@@ -120,7 +118,7 @@ number:
   - platform: template
     name: "Temperature 2 Warm"
     icon: mdi:sun-thermometer
-    id: range_cool_temp_2
+    id: range_warm_temp_2
     optimistic: true
     disabled_by_default: true
     mode: box
