--- a/common/temperature_dallas_2.yaml
+++ b/common/temperature_dallas_2.yaml
@@ -13,62 +13,58 @@ sensor:
     id: temp_2
     icon: mdi:thermometer-lines
     address: ${temp_address_2}
-    name: Temperature 2
+    name: "Temperature 2"
     state_class: "measurement"
     device_class: "temperature"
     filters:
       - calibrate_linear:
           method: least_squares
           datapoints:
-            - 0.0 -> ${cal_0_temp_2}
-            - 100.0 -> ${cal_100_temp_2}
-    disabled_by_default: true
+            - 0.0 -> ${cal_0_2}
+            - 100.0 -> ${cal_100_2}
     on_value: 
       then:
-        - component.update: range_temp_2
+        - component.update: temp_range_2
 
   # Convert to Fahrenheit - Temp. 2
   - platform: template
     state_class: "measurement"
     device_class: "temperature"
-    id: fah_temp_2
+    id: temp_f_2
     lambda: |-
       return id(temp_2).state * 9 / 5 + 32;
 
   # Calibration Temp. 2 at 0C
   - platform: template
     name: Calibration at 0°C  - Temp. 2
-    id: cal_0_temp_2_sen
+    id: cal_0_2_sen
     icon: mdi:snowflake-alert
     unit_of_measurement: "°C"
-    disabled_by_default: true
     state_class: "measurement"
     device_class: "temperature"
     entity_category: "diagnostic"
     lambda: |-
-      return {${cal_0_temp_2}};
+      return {${cal_0_2}};
 
   # Calibration Temp. 2 at 100C
   - platform: template
     name: Calibration at 100°C - Temp. 2
-    id: cal_100_temp_2_sen
+    id: cal_100_2_sen
     icon: mdi:water-thermometer
     unit_of_measurement: "°C"
-    disabled_by_default: true
     state_class: "measurement"
     device_class: "temperature"
     entity_category: "diagnostic"
     lambda: |-
-      return {${cal_100_temp_2}};
+      return {${cal_100_2}};
 
 binary_sensor:
   - platform: template
     name: Ideal Temperature 2
     id: ideal_temp_2
     icon: mdi:thermometer-check
-    disabled_by_default: true
     lambda: |-
-      if (id(range_temp_2).state == "OK") {
+      if (id(temp_range_2).state == "OK") {
         return true;
       } else {
         return false;
@@ -78,7 +74,7 @@ text_sensor:
   # Temperature Range 2
   - platform: template
     name: Temperature 2 Range
-    id: range_temp_2
+    id: temp_range_2
     icon: mdi:thermometer-water
     update_interval: "${update_temp}"
     lambda: |-
@@ -98,11 +94,10 @@ text_sensor:
 number:
   # Temperature 2 when Cool
   - platform: template
-    name: "Temperature 2 Cool"
-    id: range_cool_temp_2
+    name: "Temp. 2 Cool"
+    id: range_cool_2
     icon: mdi:snowflake-thermometer
     optimistic: true
-    disabled_by_default: true
     mode: box
     min_value: 0.0
     max_value: 100.0
@@ -113,15 +108,14 @@ number:
     device_class: "temperature"
     on_value: 
       then:
-        - component.update: range_temp_2
+        - component.update: temp_range_2
 
   # Temperature 2 when Warm
   - platform: template
-    name: "Temperature 2 Warm"
+    name: "Temp. 2 Warm"
     icon: mdi:sun-thermometer
-    id: range_warm_temp_2
+    id: range_warm_2
     optimistic: true
-    disabled_by_default: true
     mode: box
     min_value: 0.0
     max_value: 100.0
@@ -132,4 +126,4 @@ number:
     device_class: "temperature"
     on_value: 
       then:
-        - component.update: range_temp_2
+        - component.update: temp_range_2
