--- a/common/temperature_dallas_2.yaml
+++ b/common/temperature_dallas_2.yaml
@@ -1,111 +1,101 @@
 substitutions:
-  dallasPin: "16"
-  update_temp: "60s"
+  temp_address_2: ''
 
   # Calibration variables
-  # 0C using Ice Water; 100C using Boiling Water  
-  # Calibration Temp. 1
-  cal_0: "0.0"
-  cal_100: "100.0"
-  range_cool: "74"
-  range_warm: "82"
-
-# 18B20 sensor Pin
-one_wire:
-  - platform: gpio
-    pin: ${dallasPin}
+  # 0C using Ice Water; 100C using Boiling Water
+  # # Calibration Temp. 2
+  cal_0_temp_2: "0.0"
+  cal_100_temp_2: "100.0"
 
 sensor:
-  # Temperature Probe 1
+  # Temperature Probe 2
   - platform: dallas_temp
-    id: temp_1
+    id: temp_2
     icon: mdi:thermometer-lines
-    name: "Temperature"
+    address: ${temp_address_2}
+    name: "Temperature 2"
     state_class: "measurement"
     device_class: "temperature"
-    update_interval: "${update_temp}"
     filters:
       - calibrate_linear:
           method: least_squares
           datapoints:
-            - 0.0 -> ${cal_0}
-            - 100.0 -> ${cal_100}
+            - 0.0 -> ${cal_0_2}
+            - 100.0 -> ${cal_100_2}
     on_value: 
       then:
-        - component.update: temp_range
+        - component.update: temp_range_2
 
-  # Convert to Fahrenheit - Temp. 1
+  # Convert to Fahrenheit - Temp. 2
   - platform: template
     state_class: "measurement"
     device_class: "temperature"
-    id: temp_f
+    id: temp_f_2
     lambda: |-
-      return id(temp_1).state * 9 / 5 + 32;
+      return id(temp_2).state * 9 / 5 + 32;
 
-  # Calibration Temp. at 0C
+  # Calibration Temp. 2 at 0C
   - platform: template
-    name: Calibration at 0°C - Temp. 1
-    id: cal_0_sen
+    name: Calibration at 0°C  - Temp. 2
+    id: cal_0_2_sen
     icon: mdi:snowflake-alert
     unit_of_measurement: "°C"
-    disabled_by_default: true
     state_class: "measurement"
     device_class: "temperature"
     entity_category: "diagnostic"
     lambda: |-
-      return {${cal_0}};
+      return {${cal_0_2}};
 
-  # Calibration Temp. at 100C
+  # Calibration Temp. 2 at 100C
   - platform: template
-    name: Calibration at 100°C - Temp. 1
-    id: cal_100_sen
+    name: Calibration at 100°C - Temp. 2
+    id: cal_100_2_sen
     icon: mdi:water-thermometer
     unit_of_measurement: "°C"
-    disabled_by_default: true
     state_class: "measurement"
     device_class: "temperature"
     entity_category: "diagnostic"
     lambda: |-
-      return {${cal_100}};
+      return {${cal_100_2}};
 
 binary_sensor:
   - platform: template
-    name: Ideal Temperature
-    id: ideal_temp
+    name: Ideal Temperature 2
+    id: ideal_temp_2
     icon: mdi:thermometer-check
     lambda: |-
-      if (id(temp_range).state == "OK") {
+      if (id(temp_range_2).state == "OK") {
         return true;
       } else {
         return false;
       }
 
 text_sensor:
-  # Temperature Range 1
+  # Temperature Range 2
   - platform: template
-    name: Temperature Range
-    id: temp_range
+    name: Temperature 2 Range
+    id: temp_range_2
     icon: mdi:thermometer-water
     update_interval: "${update_temp}"
     lambda: |-
-      if(id(temp_f).state <= id(range_cool).state) {
+      if(id(temp_f_2).state <= id(range_cool_2).state) {
         return {"Cool"};
       }
-      if(id(temp_f).state < id(range_warm).state && id(temp_f).state > id(range_cool).state) {
+      if(id(temp_f_2).state < id(range_warm_2).state && id(temp_f_2).state > id(range_cool_2).state) {
         return {"OK"};
       }
-      if(id(temp_f).state >= id(range_warm).state) {
+      if(id(temp_f_2).state >= id(range_warm_2).state) {
         return {"Warm"};
       }     
       else {
         return {"Unknown"};
-      }  
+      }
 
 number:
-  # Temperature 1 when Cool
+  # Temperature 2 when Cool
   - platform: template
-    name: "Temp. Cool"
-    id: range_cool
+    name: "Temp. 2 Cool"
+    id: range_cool_2
     icon: mdi:snowflake-thermometer
     optimistic: true
     mode: box
@@ -118,13 +108,13 @@ number:
     device_class: "temperature"
     on_value: 
       then:
-        - component.update: temp_range
+        - component.update: temp_range_2
 
-  # Temperature 1 when Warm
+  # Temperature 2 when Warm
   - platform: template
-    name: "Temp. Warm"
+    name: "Temp. 2 Warm"
     icon: mdi:sun-thermometer
-    id: range_warm
+    id: range_warm_2
     optimistic: true
     mode: box
     min_value: 0.0
@@ -136,4 +126,4 @@ number:
     device_class: "temperature"
     on_value: 
       then:
-        - component.update: temp_range
+        - component.update: temp_range_2
