--- a/common/device_base.yaml
+++ b/common/device_base.yaml
@@ -1,6 +1,8 @@
 substitutions:
   # Import Config
   import_config: "false"
+  # Logger Level - Can use VERBOSE for more information in Logs
+  logger: "DEBUG"
 
   # I2C pins
   sdaPin: "21" # yellow/TX PMP-green
@@ -26,6 +28,25 @@ dashboard_import:
   package_import_url: github://TheRealFalseReality/aquapi/aquapi_config.yaml@main
   import_full_config: ${import_config}
 
+# Enable logging
+logger:
+  level: "${logger}"
+
+api:
+
+ota:
+  - platform: esphome
+
+wifi: 
+  ap:
+
+captive_portal:
+
+web_server:
+#   version: 3
+  
+improv_serial:
+
 # i2c Pins
 i2c:
   sda: ${sdaPin}
@@ -42,6 +63,31 @@ light:
       ignore_strapping_warning: true
 
 sensor:
+  # Internal Temp.
+  - platform: internal_temperature
+    name: "Internal Temperature"
+
+  # Wifi Signal 
+  - platform: wifi_signal # Reports the WiFi signal strength/RSSI in dB
+    name: "WiFi Signal dB"
+    disabled_by_default: true
+    id: wifi_signal_db
+    update_interval: 60s
+    entity_category: "diagnostic"
+
+  # Wifi %
+  - platform: copy # Reports the WiFi signal strength in %
+    source_id: wifi_signal_db
+    name: "WiFi Signal Strength"
+    filters:
+      - lambda: return min(max(2 * (x + 100.0), 0.0), 100.0);
+    unit_of_measurement: "%"
+    entity_category: "diagnostic"
+
+  # Uptime sensor
+  - platform: uptime
+    name: Uptime 
+
   # Internal Magnetic Sensor
   - platform: esp32_hall
     name: "ESP32 Hall Sensor"
@@ -67,9 +113,29 @@ sensor:
       }
       return nDevices;
 
+binary_sensor:
+  # API Status
+  - platform: status
+    name: "Status"
+
 text_sensor:
+  # Hostname
+  - platform: template
+    name: "Hostname"
+    id: hostname
+    icon: mdi:cellphone-arrow-down
+    lambda: |-
+      return {"${name}"};
+    entity_category: "diagnostic"
+
   # Wifi Info
   - platform: wifi_info
+    ip_address:
+      name: IP Address
+      icon: mdi:ip-network
+    ssid:
+      name: Connected SSID
+      icon: mdi:wifi-arrow-left-right
     bssid:
       name: Connected BSSID
       icon: mdi:wifi-star
@@ -77,3 +143,25 @@ text_sensor:
     mac_address:
       name: Mac Address
       icon: mdi:chip
+
+button:
+  # Soft Restart
+  - platform: restart
+    id: restart_button
+    name: "Restart"
+
+  # Factory Reset
+  - platform: factory_reset
+    name: Factory Reset (USE WITH CAUTION)
+    disabled_by_default: true
+
+  # Safe Mode Restart
+  - platform: safe_mode
+    name: "Restart in Safe Mode"
+    id: restart_safe
+
+  # Shutdown
+  - platform: shutdown
+    name: "Shutdown"
+    disabled_by_default: true
+    id: shutdown_button
