--- a/common/binary.yaml
+++ b/common/binary.yaml
@@ -1,8 +1,11 @@
 substitutions:  
+  # Optical_1
   opticalLowPin: "33" # yellow
   opticalHighPin: "32" # blue
+  # AUX_1 - DAC
   auxPin: "26" # yellow
   leak_sensor: "25" # blue
+  
   # Water Level
   update_water: "60s"
 
